crates/flir-cli/tests/integration/snapshots/integration__help__help-2.snap
---
source: crates/flir-cli/tests/integration/help.rs
expression: "Command::new(binary_path()).arg(\"--help\").run().normalize_os_executable_name()"
---
success: true
exit_code: 0
----- stdout -----
flir: Find and Fix Lints in R Code

Usage: flir <COMMAND>

Commands:
  check   Check a set of files or directories
  server  Start a language server
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version

For help with a specific command, see: `flir help <command>`.

----- stderr -----

----- args -----
--help
